# Skill-Compiler

./: .env.example  .gitignore  Cargo.toml  GOSIM-spotlight-2026-apply.md  MEGA_PROMPT.md  PROGRESS.md  README.md
build_codex/: langsmith-fetch.md  manifest.json
build_codex2/: competitive-ads-extractor.md  manifest.json
build_gemini/: langsmith-fetch.md  manifest.json
build_gemini/assets/: config.yaml
build_gemini2/: competitive-ads-extractor.md  manifest.json
build_gemini2/assets/: config.yaml
build_kimi/: langsmith-fetch.md  manifest.json
build_kimi2/: competitive-ads-extractor.md  manifest.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  BACKEND_ADAPTERS.md  CLI_DESIGN.md  COMPILER_PIPELINE.md  DEVELOPMENT_GUIDE.md  ERROR_HANDLING.md  IR_DESIGN.md  README.md  ROADMAP.md  ROADMAP_2026.md  ROUTING_MANIFEST.md  SECURITY_MODEL.md  SPECIFICATION.md  TESTING_STRATEGY.md  USER_GUIDE.md  figures_prompt.md  figures_prompt_short.md  高级提示词工程格式与智能体技能架构：大语言模型的结构化敏感性与最佳实践分析.md
docs/diagrams/: Agent Skill Invocation Flow.drawio  The Compiler Argument mn v2.drawio  The Compiler Argument mn v3.drawio  The Compiler Argument mn.drawio  agent internal flowchart(wrong).drawio  agent internal flowchart.drawio  agent skill invocation flow(1856).drawio  compilation_flow.md  data_flow.md  module_dependencies.md
nexa-skill-cli/: Cargo.toml
nexa-skill-cli/src/: config.rs  logging.rs  main.rs
nexa-skill-cli/src/commands/: build.rs  check.rs  clean.rs  init.rs  list.rs  mod.rs  validate.rs
nexa-skill-core/: Cargo.toml
nexa-skill-core/src/: lib.rs
nexa-skill-core/src/analyzer/: anti_skill.rs  mcp.rs  mod.rs  nested_data.rs  permission.rs  schema.rs
nexa-skill-core/src/backend/: claude.rs  codex.rs  emitter.rs  gemini.rs  kimi.rs  mod.rs  registry.rs  routing_manifest.rs
nexa-skill-core/src/error/: diagnostic.rs  mod.rs
nexa-skill-core/src/frontend/: ast.rs  frontmatter.rs  markdown.rs  mod.rs
nexa-skill-core/src/ir/: builder.rs  constraint.rs  example.rs  mod.rs  nested_data.rs  permission.rs  procedure.rs  section_info.rs  skill_ir.rs
nexa-skill-core/src/security/: baseline.rs  level.rs  mod.rs  permission.rs
nexa-skill-templates/: Cargo.toml  askama.toml
nexa-skill-templates/src/: lib.rs
nexa-skill-templates/templates/: claude_md.j2  claude_xml.j2  codex_md.j2  gemini_md.j2  gemini_md_v2.j2  kimi_md.j2
npm-nexa-skill-compiler/: .npmignore  LICENSE  README.md  package.json
npm-nexa-skill-compiler/scripts/: install.js
papers/: NSC_ACADEMIC_PAPER.md
scripts/: academic_evaluation.py  batch_test_runner.py  exp_cross_platform.py  exp_security_detection.py  exp_token_efficiency.py  fetch_real_skills.py  fetch_skills.sh  generate_task_data.py  generate_test_dataset.py  llm_evaluator.py  nsc_eval.py  run_e2e_tests.py  run_large_scale_tests.py
vscode-nexa-skill/: .vscodeignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-nexa-skill/snippets/: skill.code-snippets.json
vscode-nexa-skill/src/: compiler.ts  completion.ts  diagnostics.ts  extension.ts  hover.ts  preview.ts  statusBar.ts
vscode-nexa-skill/syntaxes/: skill.tmLanguage.json
