# Nexa Skill Templates - Askama Templates
#
# This crate contains Askama templates for generating
# platform-specific output files (Claude XML, Codex JSON, etc.)

[package]
name = "nexa-skill-templates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Askama templates for Nexa Skill Compiler output generation"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Template engine
askama.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true